--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     /* background-color: blue; */
-    background-color:black;
+    background-color:rgb(44, 43, 43);
     color: white;
     font-family: 'Fredoka', sans-serif;
 }
@@ -15,13 +15,29 @@ header{
     border-bottom: 1px solid whitesmoke;
 }
 
-header ul li {
-    margin-left: 2vw;;
+header>ul>li {
+    margin-right: 2vw;
+    list-style: none;
+    /* color: blueviolet; */
 }
+
+.header li:hover{
+ color: aqua; 
+ /* background-color: #fff;   */
+}
+
+.header>li>img{
+    width:2vw;
+    height:4vh;
+    object-fit:fill;
+    padding-top: 1vh;
+}
+
  header>img{
      margin-left:1.5vw;
      /* margin-top: 3vh; */
      width:10vw;
+     /* object-fit: cover; */
 
  }
 .header{
@@ -30,27 +46,34 @@ header ul li {
     display: flex;
     justify-content: space-around;
     width:25vw;
+    flex-wrap: wrap;
 }
+
 .search{
     display: flex;
     margin-left:32vw;
 }
-
-.search>input:hover{
-    background-color:white;
-    color: black;
-}
-
-.search>input{
+.search input{
     width:37vh;
     height:4.5vh;
     border-radius: 50px;
+    padding-left:5.8rem;
+    background-color: antiquewhite;
+    /* rem considers the outer the parent */
+    /* em will consider the whole size of the screen root most screen */
 }
+
+.search>input:hover{
+    background-color:rgb(158, 241, 150);
+    color: black;
+}
+
 
 .search>input::placeholder{
     display: flex;
     justify-content: center;
     margin-left:5vw;
+    color: black;
    
 }
 
@@ -88,7 +111,25 @@ header ul li {
 .albumsparent{
     list-style:none;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+}
+
+.albumsparent li p{
+    position: absolute;
+    padding-top:7vh;
+    text-align: center;
+    opacity: 0;
+    width:inherit;
+    height: inherit;
+}
+
+.albumsparent li p:hover{
+    opacity: 1;
+    /* background-color:transparent; */
+    border:1px solid green;
+    border-radius: 10px;
+    width: inherit;
+    height: inherit;
 }
 
 .playlist{
@@ -100,8 +141,6 @@ header ul li {
 }
 
 .album{
-    position: relative;
-    /* border:5px solid white; */
     background-color:white;
     width:25vh;
     height:25vh;
@@ -110,10 +149,6 @@ header ul li {
     justify-content: center;
 }
 .album>img{
-    /* margin: 0px; */
-    position:absolute;
-    top: 0;
-    left:0;
     border-radius:10px ;
     height: inherit;
     width: inherit;
